--- a/Login.html
+++ b/Login.html
@@ -24,7 +24,7 @@
         <strike>consectetur adipisicing elit</strike>. <br>     <!--  tachado -->
         Ullam quis facilis veritatis. <br>
         Facere officia animi corrupti, ut nostrum, <br>
-        vero eius accusamus at magnam dolore nam pariatur? Incidunt ratione ipsam necessitatibus.
+        vero eius nam pariatur? Incidunt ratione ipsam necessitatibus.
     </p>
     
     <a href="index.html">Home</a> <br>              <!--  ir a archivo en otra carpeta local -->
