--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="menu">
                         <div class="title-bar" data-responsive-toggle="main-nav" data-hide-for="medium">
                             <button class="menu-icon dark" type="button" data-toggle="main-nav"></button>
-                            <div class="title-bar-title">Menú</div>
+                            <div class="title-bar-title">Menú.</div>
                         </div>
 
                         <nav id="main-nav">
