--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <ul class="main-navigation">
                                 <li><a class="m-active" href="#" data-text="Home">Principal</a></li>
                                 <li><a class="m-anim" href="#specials-grid" data-text="Specials">Combos</a></li>                                
-                                <li><a class="m-anim" href="#main-menu" data-text="Menu Cart">Por ingredientes</a></li>
+                                <li><a class="m-anim" href="#main-menu" data-text="Menu Cart">A tu gusto</a></li>
                                 <li><a class="m-anim" href="#about-us" data-text="About">Nosotros</a></li>
                                 <li><a class="m-anim" href="#contact-us" data-text="Contact">Pedidos</a></li>
                             </ul>
